add selecta and trait

--- a/csstests/public/autocomplete/selector.html
+++ b/csstests/public/autocomplete/selector.html
@@ -19,11 +19,12 @@
         <li>9</li>
     </ul>
 </div>
-<h2>Hello Selector</h2>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, qui.</p>
-
-<p>Assumenda delectus, nam quidem quis saepe sit soluta tempora temporibus?</p>
+<p class="line-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Aspernatur, aut dolor doloremque earum
+    fuga nam natus nihil nulla officia quasi quibusdam
+    repellendus suscipit tempora voluptatem voluptates. Doloremque
+    dolores fugiat quis.
+</p>
 
 </body>
 </html>
